--- a/app/src/main/res/layout/activity_farm_detail.xml
+++ b/app/src/main/res/layout/activity_farm_detail.xml
@@ -38,7 +38,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?android:attr/actionBarSize"
                 app:title=" "
                 app:layout_collapseMode="pin" />
         </android.support.design.widget.CollapsingToolbarLayout>
