--- a/app/src/main/res/layout/activity_farm_detail.xml
+++ b/app/src/main/res/layout/activity_farm_detail.xml
@@ -38,7 +38,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?android:attr/actionBarSize"
                 app:title=" "
                 app:layout_collapseMode="pin" />
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -53,91 +53,139 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
+                android:text="사과농장"
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
+                android:text="사과농장"
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
                 android:lineSpacingExtra="8dp"
+                android:padding="@dimen/activity_search_toolbar_left_padding"
                 android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:lineSpacingExtra="8dp"
-                android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:lineSpacingExtra="8dp"
-                android:text="사과농장"
-                android:padding="@dimen/activity_search_toolbar_left_padding" />
+                android:textSize="28sp" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="123"
+
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="123"
+
+                />
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="123"
+
+                />
+
+
+        </LinearLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 
