--- a/app/src/main/res/layout/activity_farm_detail.xml
+++ b/app/src/main/res/layout/activity_farm_detail.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/detail_location_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
@@ -61,6 +62,7 @@
                 android:text="사과농장"
                 android:padding="@dimen/activity_search_toolbar_left_padding" />
             <TextView
+                android:id="@+id/detail_name_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
@@ -68,6 +70,7 @@
                 android:text="사과농장"
                 android:padding="@dimen/activity_search_toolbar_left_padding" />
             <TextView
+                android:id="@+id/detail_price_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
@@ -75,6 +78,7 @@
                 android:text="사과농장"
                 android:padding="@dimen/activity_search_toolbar_left_padding" />
             <TextView
+                android:id="@+id/detail_days_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
