detail activity에서 신청하기 버튼 제작 To Do: 디자이너에게 바탕색, 글자색 받아서 수정하기 신청하기 눌렀을 때, 날짜 창 나오도록 하기

--- a/app/src/main/res/layout/activity_farm_detail.xml
+++ b/app/src/main/res/layout/activity_farm_detail.xml
@@ -203,5 +203,12 @@
 
     </android.support.v4.widget.NestedScrollView>
 
+    <Button
+        android:id="@+id/detail_apply_btn"
+        android:text="신청 하기"
+        android:background="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"/>
 
 </android.support.design.widget.CoordinatorLayout>
